syntax = "proto3";
option go_package = "../proto";

package file_storage;

service FileStorage {
  rpc LogIn(LogInRequest) returns (LogInResponse) {}
  rpc Reg(RegRequest) returns (RegResponse) {}
  rpc GetFiles(GetFilesRequest) returns (stream GetFilesResponse) {}
  rpc PostFile(stream PostFileRequest) returns (PostFileResponse) {}
  rpc GetFile(GetFileRequest) returns (stream GetFileResponse) {}
}

message LogInRequest {
  string login = 1;
  string password = 2;
}

message LogInResponse {
  string response = 1;
}

message RegRequest {
  string login = 1;
  string password = 2;
}

message RegResponse {
  string response = 1;
}

message GetFilesRequest {
  string client = 1;
}

message  GetFilesResponse {
  string response = 1;
}

message PostFileRequest {
  string filename = 1;
  bytes fileData = 2;
  string client = 3;
}

message PostFileResponse {
  string response = 1;
}

message GetFileRequest {
  string filename = 1;
  string client = 2;
}

message  GetFileResponse {
  string filename = 1;
  bytes fileData = 2;
}
